# Basic-Snake

./: .gitignore.txt  CMakeLists.txt  README.md  main.cpp
Scripts/: Entity.h  Food.cpp  Food.h  GameLoop.cpp  GameLoop.h  GameUtils.h  Snake.cpp  Snake.h
